--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,8 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "index": "src/index.html",
+            "outputPath": "dist/browser",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
@@ -88,5 +90,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
