--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@angular/core": "^18.0.0",
     "@angular/platform-browser": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@sanity/client": "^7.8.2",
+    "@sanity/image-url": "^1.1.0",
     "animejs": "^4.1.2",
     "gsap": "^3.13.0",
     "rxjs": "~7.8.0",
