--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ngx-markdown": "^18.1.0",
     "prismjs": "^1.30.0",
     "rxjs": "~7.8.0",
+    "three": "^0.179.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "@angular/forms": "^18.0.0",
     "@types/gsap": "^1.20.2",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.179.0",
     "autoprefixer": "^10.0.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
