--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^18.0.0",
     "@sanity/client": "^7.8.2",
     "@sanity/image-url": "^1.1.0",
+    "@supabase/supabase-js": "^2.58.0",
     "animejs": "^4.1.2",
     "gsap": "^3.13.0",
     "ngx-markdown": "^18.1.0",
