feat: implementa gerador de posts com IA usando Google Gemini
 Funcionalidades adicionadas:
- Gerador automático de posts para blog usando Gemini 2.0 Flash
- Interface completa no dashboard administrativo
- Configuração de tom, tamanho e palavras-chave
- Integração direta com Sanity CMS
- Teste de conectividade com múltiplos modelos Gemini
- Botão de teste de conexão com feedback visual

 Melhorias técnicas:
- Service dedicado para comunicação com API Gemini
- Tratamento robusto de erros e validações
- Interface responsiva com loading states
- Configuração de environment para API keys
- Suporte a diferentes modelos Gemini (2.0-flash, 1.5-flash, etc.)

 Interface do usuário:
- Componente moderno integrado ao dashboard
- Estados de loading e feedback visual
- Formulário intuitivo com opções avançadas
- Visualização do conteúdo gerado antes de salvar
- Botões para copiar, salvar no Sanity e limpar

 Funcionalidades do gerador:
- Geração de título, slug, resumo e conteúdo completo
- Sugestão automática de palavras-chave
- Conteúdo em markdown com formatação adequada
- Suporte a diferentes tons: casual, formal, técnico, amigável
- Controle de tamanho: curto, médio, longo
- Validação de campos obrigatórios

 Integração Sanity:
- Salvamento automático de posts no CMS
- Verificação de slugs únicos
- Estrutura compatível com schema existente
- Tratamento de erros de conexão

Esta implementação permite criar conteúdo de qualidade automaticamente,
economizando tempo na criação de posts para o blog.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,11 @@ yarn-error.log
 testem.log
 /typings
 
+# Markdown files
+SUPABASE-SETUP-GUIDE.md
+AI-POST-GENERATOR-SETUP.md
+ENVIRONMENT-SETUP.md
+
 # System files
 .DS_Store
 Thumbs.db
