--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -30,16 +30,40 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Show Angular & Node versions
+        run: |
+          node -v
+          npx ng version
+
       - name: Build (prod) with base-href
         run: npm run build:ghpages
 
-      - name: SPA Fallback (copy index.html to 404.html)
-        run: cp dist/browser/index.html dist/browser/404.html
+      - name: List dist (debug)
+        run: |
+          echo "Conteúdo de dist após build:"
+          ls -R dist || true
+
+      - name: Detect build directory and add SPA fallback
+        run: |
+          set -eux
+            if [ -f dist/browser/index.html ]; then
+              BUILD_DIR="dist/browser"
+            elif [ -f dist/myapp/browser/index.html ]; then
+              BUILD_DIR="dist/myapp/browser"
+            else
+              echo "index.html não encontrado. Abortando."
+              ls -R dist || true
+              exit 1
+            fi
+            echo "Build directory detectado: $BUILD_DIR"
+            cp "$BUILD_DIR/index.html" "$BUILD_DIR/404.html"
+            echo "404.html criado."
+            echo "BUILD_DIR=$BUILD_DIR" >> $GITHUB_ENV
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/browser
+          path: ${{ env.BUILD_DIR }}
 
   deploy:
     environment:
