--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ testem.log
 SUPABASE-SETUP-GUIDE.md
 AI-POST-GENERATOR-SETUP.md
 ENVIRONMENT-SETUP.md
+ENVIRONMENT-VARIABLES.md
 
 # System files
 .DS_Store
@@ -50,3 +51,9 @@ Thumbs.db
 /src/environments/environment.ts
 /src/environments/environment.prod.ts
 /src/environments/environment.*.ts
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
