--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "config:env": "node scripts/set-env.js",
+    "config:env:prod": "node scripts/set-env-prod.js",
+    "prestart": "npm run config:env",
     "start": "ng serve",
+    "prebuild": "npm run config:env:prod",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:ghpages": "ng build --configuration production --base-href /Portifolio/"
+    "build:ghpages": "npm run config:env:prod && ng build --configuration production --base-href /Portifolio/"
   },
   "prettier": {
     "singleQuote": true,
@@ -48,6 +52,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/three": "^0.179.0",
     "autoprefixer": "^10.0.0",
+    "dotenv": "^17.2.3",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
