fix: Configura variáveis de ambiente no GitHub Actions
 Workflow atualizado:
- Criação automática do .env durante o deploy
- Usa GitHub Secrets para credenciais seguras
- Gera environment.prod.ts antes do build
- Remove execução duplicada de config:env:prod

 Documentação adicionada:
- GITHUB-SECRETS-SETUP.md com passo a passo completo
- Instruções de como adicionar secrets no repositório
- Troubleshooting para problemas comuns

 Segurança:
- Secrets criptografados pelo GitHub
- Credenciais mascaradas nos logs
- .env temporário descartado após deploy

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -35,6 +35,20 @@ jobs:
           node -v
           npx ng version
 
+      - name: Configure Environment Variables
+        run: |
+          echo "🔧 Configurando variáveis de ambiente para produção..."
+          cat > .env << EOF
+          SUPABASE_URL=${{ secrets.SUPABASE_URL }}
+          SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }}
+          GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
+          EOF
+          echo "✅ Arquivo .env criado"
+          
+          echo "🔄 Gerando environment.prod.ts..."
+          npm run config:env:prod
+          echo "✅ environment.prod.ts configurado"
+
       - name: Build (prod) with base-href
         run: npm run build:ghpages
 
