--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ SUPABASE-SETUP-GUIDE.md
 AI-POST-GENERATOR-SETUP.md
 ENVIRONMENT-SETUP.md
 ENVIRONMENT-VARIABLES.md
+GITHUB-SECRETS-SETUP.md
 
 # System files
 .DS_Store
