--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:ghpages": "npm run config:env:prod && ng build --configuration production --base-href /Portifolio/"
+    "build:ghpages": "ng build --configuration production --base-href /Portifolio/"
   },
   "prettier": {
     "singleQuote": true,
