fix: Corrige rotas serverless do backend no vercel.json
- Adiciona rotas específicas para cada endpoint da API
- Corrige mapeamento de /api/gemini/generate
- Corrige mapeamento de /api/sanity/*

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,12 +8,28 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
       "src": "/health",
       "dest": "/api/health.js"
+    },
+    {
+      "src": "/api/gemini/generate",
+      "dest": "/api/gemini/generate.js"
+    },
+    {
+      "src": "/api/sanity/query",
+      "dest": "/api/sanity/query.js"
+    },
+    {
+      "src": "/api/sanity/mutate",
+      "dest": "/api/sanity/mutate.js"
+    },
+    {
+      "src": "/api/sanity/chat",
+      "dest": "/api/sanity/chat.js"
+    },
+    {
+      "src": "/api/proxy",
+      "dest": "/api/proxy.js"
     },
     {
       "src": "/",
